up to date copies of files so far

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 body{
-    background-color: red;
+    background-color: green;
 }
 
-.row{
-    background-color: blue;
+.searchBar{
+    border: 2px solid black;
 }
 
 .row > div{
