--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,32 @@
+.navCustom{
+    background-color: #94C2C0;
+ 
+ }
+ 
+ #sportsLink{
+    color: black;
+ }
+ 
+ #jumboStyling{
+    background-color: #03A6A6;
+    /* background: url(“./testBackground.jpg”);      HOW TO CENTER AND STRETCH? */
+ 
+ }
+ 
+ #gallery{
+    background-color: #072040;
+ 
+ }
+ 
+ #code{
+    color: rgb(233, 148, 0);
+ }
+ 
+ .gooFont{
+    font-family: ‘Ubuntu’, sans-serif;
+ }
 body{
-    background-color: green;
+    background-color: #94C2C0;
 }
 
 .searchBar{
@@ -9,4 +36,7 @@ body{
 .row > div{
     background-color: white;
     border: 2px solid black;
+}
+.safetyScore, .key {
+    border: 2px solid blue;
 }
