--- a/styles.css
+++ b/styles.css
@@ -52,9 +52,15 @@ body{
 
 /* 
 Color Scheme
-#1C3341
-#008773
-#6BB983
-#F2C975
-#ED6353
- */
+#7CDEDC teal blue
+#7284A8 light navy blue
+#474954 light black, called outspace
+
+OR THIS...
+#12130F
+#5B9279
+#8FCB9B
+#EAE6E5
+#8F8073
+*/
+
