--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
  }
  
  #sportsLink{
-    color: black;
+    color: blue;
  }
  
  #jumboStyling{
@@ -31,7 +31,7 @@ body{
 }
 
 .searchBar{
-    border: 2px solid black;
+    border: 2px solid blue;
 }
 
 .row > div{
