--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,10 @@ body{
     height: 400px;
     width: 400px;
 }
+/* #myChart {
+    width: 600px !important;
+    height: 400px !important;
+} */
 
 /* 
 Color Scheme
